@@ -10,6 +10,11 @@
 typedef struct _DiaPageLayout DiaPageLayout;
 typedef struct _DiaPageLayoutClass DiaPageLayoutClass;
 
+typedef enum {
+  DIA_PAGE_ORIENT_PORTRAIT,
+  DIA_PAGE_ORIENT_LANDSCAPE
+} DiaPageOrientation;
+
 struct _DiaPageLayout {
   GtkTable parent;
 
@@ -39,7 +44,27 @@ struct _DiaPageLayoutClass {
   void (*fittopage)(DiaPageLayout *pl);
 };
 
-GtkType    dia_page_layout_get_type (void);
-GtkWidget *dia_page_layout_new      (void);
+GtkType      dia_page_layout_get_type    (void);
+GtkWidget   *dia_page_layout_new         (void);
+
+const gchar *dia_page_layout_get_paper   (DiaPageLayout *pl);
+void         dia_page_layout_set_paper   (DiaPageLayout *pl,
+					  const gchar *paper);
+void         dia_page_layout_get_margins (DiaPageLayout *pl,
+					  gfloat *tmargin, gfloat *bmargin,
+					  gfloat *lmargin, gfloat *rmargin);
+void         dia_page_layout_set_margins (DiaPageLayout *pl,
+					  gfloat tmargin, gfloat bmargin,
+					  gfloat lmargin, gfloat rmargin);
+DiaPageOrientation dia_page_layout_get_orientation (DiaPageLayout *pl);
+void         dia_page_layout_set_orientation (DiaPageLayout *pl,
+					      DiaPageOrientation orient);
+
+/* get paper sizes and default margins ... */
+void dia_page_layout_get_paper_size      (const gchar *paper,
+					  gfloat *width, gfloat *height);
+void dia_page_layout_get_default_margins (const gchar *paper,
+					  gfloat *tmargin, gfloat *bmargin,
+					  gfloat *lmargin, gfloat *rmargin);
 
 #endif
